Monetize: Fix Launchpad CSS, boxes & ads tabs (#89375)
* Monetize: Fix CSS for Launchpad + boxes

* Update Ads settings tabs CSS

* Fix subscriber view

* Fix scrollbar on Earnings

* Update css for Dialogs, tooltips & Ads boxes

--- a/client/my-sites/earn/memberships/style.scss
+++ b/client/my-sites/earn/memberships/style.scss
@@ -28,7 +28,7 @@ body.is-section-earn.theme-default.color-scheme {
 
 .memberships__module-content {
 	max-height: 520px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	margin-top: -24px;
 	border-bottom: 1px solid var(--color-neutral-5);
 }
